WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
103922
IndexedDB: propagate transaction_ids through open, commit, and abort
https://bugs.webkit.org/show_bug.cgi?id=103922
Summary
IndexedDB: propagate transaction_ids through open, commit, and abort
Alec Flett
Reported
2012-12-03 13:36:54 PST
IDBFactory.open() and IDBOpenRequest.onUpgradedNeeded() require a transaction id to originate on the frontend, rather than the backend. This patch mints a new transaction id in open() then reflects it back through onUpgradeNeeded so the frontend can hook it up there.
Attachments
Patch
(22.33 KB, patch)
2012-12-07 09:48 PST
,
Alec Flett
no flags
Details
Formatted Diff
Diff
Patch
(27.42 KB, patch)
2012-12-07 10:56 PST
,
Alec Flett
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alec Flett
Comment 1
2012-12-07 09:48:05 PST
Created
attachment 178231
[details]
Patch
Alec Flett
Comment 2
2012-12-07 10:03:50 PST
Comment on
attachment 178231
[details]
Patch actually wait there was one more thing I wanted to get into this patch.
Alec Flett
Comment 3
2012-12-07 10:56:26 PST
Created
attachment 178241
[details]
Patch
David Grogan
Comment 4
2012-12-07 14:23:43 PST
Comment on
attachment 178241
[details]
Patch lgtm
Alec Flett
Comment 5
2012-12-07 14:42:29 PST
tony@ - r?
WebKit Review Bot
Comment 6
2012-12-07 15:21:01 PST
Comment on
attachment 178241
[details]
Patch Clearing flags on attachment: 178241 Committed
r136992
: <
http://trac.webkit.org/changeset/136992
>
WebKit Review Bot
Comment 7
2012-12-07 15:21:04 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug